--- a/vercel.json
+++ b/vercel.json
@@ -1,7 +1,8 @@
 {
   "functions": {
     "api/upload.js": {
-      "maxDuration": 60
+      "maxDuration": 60,
+      "runtime": "nodejs18.x"
     }
   }
 }
